first HTML list

--- a/my_list.html
+++ b/my_list.html
@@ -1,7 +1,7 @@
 <h1>My Plant List</h1>
 <p>Some of my favorite plants!</p>
 <ul>
-  <li>"Monstera Deliciosa"</li>
+  <li>"Monstera deliciosa"</li>
   <li>"Fiddle Leaf Fig"</li>
   <li>"Pilea"</li>
   <li>"Golden Pothos"</li>
